--- a/app/src/main/res/layout/activity_harf_sec_test.xml
+++ b/app/src/main/res/layout/activity_harf_sec_test.xml
@@ -1,31 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context="com.example.uur.kelimeezberle.HarfSec"
-                android:background="@color/Harfbg_color">
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp">
-
-
-    <Button
-        android:id="@+id/abtn"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:text="A"
-        android:textColor="@color/buton_color"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_margin="17dp"
-        android:background="@drawable/round_button"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_marginTop="30dp" />
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            tools:context="com.example.uur.kelimeezberle.HarfSec"
+            tools:background="#1d1d1d">
 
     <Button
         android:id="@+id/bbtn"
@@ -67,17 +46,6 @@
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="30dp" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="10dp">
-
-
     <Button
         android:id="@+id/ebtn"
         style="?android:attr/buttonStyleSmall"
@@ -90,8 +58,7 @@
         android:layout_margin="17dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_marginTop="30dp"
-        />
+        android:layout_marginTop="30dp" />
 
     <Button
         android:id="@+id/fbtn"
@@ -134,15 +101,6 @@
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="30dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginLeft="10dp">
-
 
     <Button
         android:id="@+id/ibtn"
@@ -172,21 +130,21 @@
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="30dp" />
 
-        <Button
-            android:id="@+id/lbtn"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:text="L"
-            android:textColor="@color/buton_color"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_margin="17dp"
-            android:background="@drawable/round_button"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="30dp" />
+    <Button
+        android:id="@+id/lbtn"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:text="L"
+        android:textColor="@color/buton_color"
+        android:layout_row="2"
+        android:layout_column="2"
+        android:layout_margin="17dp"
+        android:background="@drawable/round_button"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="30dp" />
 
-        <Button
+    <Button
         android:id="@+id/mbtn"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="55dp"
@@ -200,31 +158,21 @@
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="30dp" />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/nobtn"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:text="NO"
+        android:textColor="@color/buton_color"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:layout_margin="17dp"
+        android:background="@drawable/round_button"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="30dp" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="320dp"
-        android:layout_marginLeft="10dp">
-
-
-        <Button
-            android:id="@+id/nobtn"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:text="NO"
-            android:textColor="@color/buton_color"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_margin="17dp"
-            android:background="@drawable/round_button"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_marginTop="30dp" />
-
-        <Button
+    <Button
         android:id="@+id/pbtn"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="55dp"
@@ -265,15 +213,6 @@
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="30dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="420dp"
-        android:layout_marginLeft="10dp">
-
 
     <Button
         android:id="@+id/tbtn"
@@ -316,5 +255,18 @@
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="30dp" />
-    </LinearLayout>
-    </RelativeLayout>
+
+    <Button
+        android:id="@+id/abtn"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:text="A"
+        android:textColor="@color/buton_color"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_margin="17dp"
+        android:background="@drawable/round_button"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="30dp" />
+
+</GridLayout>
