--- a/app/src/main/res/layout/activity_ingtur_scnk.xml
+++ b/app/src/main/res/layout/activity_ingtur_scnk.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/quiz_bg1"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,48 +14,105 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        android:textSize="25sp"
+        android:textSize="60sp"
         android:gravity="center"
-        android:background="#e3c34f"
+        android:background="@drawable/myquestion_radios"
         android:textStyle="bold"
-        android:textColor="@color/bright_foreground_inverse_material_dark"
-        android:layout_marginTop="20dp"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="250dp"
         android:autoText="false" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Answer"
         android:id="@+id/button"
         android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:background="@drawable/mybutton_radios"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/textView" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Answer"
         android:id="@+id/button2"
         android:layout_below="@+id/button"
+        android:textColor="#ffffff"
+        android:background="@drawable/mybutton_radios"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Answer"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
         android:layout_alignRight="@+id/button2"
+        android:textColor="#ffffff"
+        android:background="@drawable/mybutton_radios"
         android:layout_alignEnd="@+id/button2" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Answer"
         android:id="@+id/button4"
         android:layout_below="@+id/button3"
+        android:textColor="#ffffff"
+        android:background="@drawable/mybutton_radios"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+
+
+    <TextView
+        android:text="0/0"
+        android:textSize="24sp"
+        android:layout_width="70dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="27dp"
+        android:id="@+id/tv_question_count"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"/>
+    <TextView
+        android:text="Question"
+        android:layout_width="80dp"
+        android:layout_height="27dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="55dp"
+        android:id="@+id/textView3"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:text="Point"
+        android:textSize="24sp"
+        android:layout_width="60dp"
+        android:layout_height="27dp"
+        android:layout_marginRight="13dp"
+        android:id="@+id/txt_Point"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="27dp"/>
+
+    <TextView
+        android:text="0"
+        android:layout_width="60dp"
+        android:layout_height="27dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="13dp"
+        android:layout_marginTop="55dp"
+        android:id="@+id/txt_true"
+        android:textSize="24sp"/>
+
+
 </RelativeLayout>
 
